# BreathCheck

./: .gitignore  APP_USER_GUIDE.txt  CODEBASE_EXPLAINER.txt  README.md  milestones.txt  module_1_content.txt  pyproject.toml
docs/: README.txt  index.html  script.js  style.css  styles.css
src/anxiety_app/: main.py
src/anxiety_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/anxiety_app/core/: config.py  logging_config.py  paths.py  preferences.py  security.py
src/anxiety_app/data/: db.py  models.py  repositories.py
src/anxiety_app/domain/: analytics.py  entities.py  services.py
src/anxiety_app/services/: ai_client.py  insights_service.py  settings_service.py  tool_feedback_service.py
src/anxiety_app/tests/: test_models.py  test_services.py  test_ui_smoke.py
src/anxiety_app/ui/: combobox_centering.py  main_window.py  style.qss  theme.py
src/anxiety_app/ui/widgets/: about_view.py  card_widgets.py  change_password_dialog.py  contact_view.py  home_view.py  insights_view.py  learn_program_view.py  learn_view.py  login_dialog.py  login_view.py  onboarding_view.py  progress_view.py  rounded_scroll_area.py  settings_view.py  sidebar.py  support_view.py  toast.py  tools_view.py  track_view.py
