[project]
name = "anxiety-app"
version = "0.1.0"
description = "Self-help mental health desktop app focused on anxiety and worry management."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyQt5>=5.15",
  "SQLAlchemy>=2.0",
  "python-dotenv>=1.0",
  "keyring>=24.0",
  "pydantic>=2.0",
  "platformdirs>=4.0",
  "cryptography>=42.0",
  "openpyxl>=3.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-qt>=4.2",
  "mypy>=1.5",
  "ruff>=0.3",
  "black>=24.0",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["src/anxiety_app/tests"]
